# template_application

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
.github/workflows/: ctest.yml  test_on_push.yml
doc/: CMakeLists.txt  Doxyfile  README.md
src/: CMakeLists.txt  calc.cpp  calc.hpp  main.cpp
test/: CMakeLists.txt  test_calc_basic.cpp  test_calc_death.cpp
